primo refactoring spero funzioni tutto